# blue-pill-template

./: Cargo.toml  README.md  debug.gdb
src/: main.rs
