[package]
authors = ["{{authors}}"]
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.5"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.4"
nb = "0.1.1"

[dependencies.stm32f103xx-hal]
git = "https://github.com/japaric/stm32f103xx-hal.git"
features = ["rt"]
version = "*"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
